package router

import (
	"encoding/json"
	"github.com/yzf120/elysia-backend/errs"
	"net/http"

	"github.com/gorilla/mux"
	pb "github.com/yzf120/elysia-backend/proto/user"
	"github.com/yzf120/elysia-backend/service_impl"
)

var userService = service_impl.NewUserServiceImpl()

func registerUser(router *mux.Router) {
	// 创建用户 - POST
	router.HandleFunc("/api/user/create", createUserHandler).Methods("POST")

	// 获取用户 - GET (只支持通过单个ID查询)
	router.HandleFunc("/api/user/get", getUserHandler).Methods("GET")

	// 更新用户 - POST
	router.HandleFunc("/api/user/update", updateUserHandler).Methods("POST")

	// 删除用户 - POST
	router.HandleFunc("/api/user/delete", deleteUserHandler).Methods("POST")

	// 查询用户列表 - POST (支持复杂查询条件)
	router.HandleFunc("/api/user/list", listUsersHandler).Methods("POST")
}

// createUserHandler 创建用户处理器
func createUserHandler(w http.ResponseWriter, r *http.Request) {
	ctx := r.Context()
	// 设置响应头
	w.Header().Set("Content-Type", "application/json")
	w.Header().Set("Cache-Control", "no-cache")
	w.Header().Set("Access-Control-Allow-Origin", "*")

	// 解析请求体
	req := &pb.CreateUserRequest{}
	if err := json.NewDecoder(r.Body).Decode(req); err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(http.StatusBadRequest, err.Error()),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(http.StatusBadRequest)
		w.Write(respBytes)
		return
	}

	// 调用服务
	resp, err := userService.CreateUser(ctx, req)
	if err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(int(resp.Code), resp.Message),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(int(resp.Code))
		w.Write(respBytes)
		return
	}

	// 序列化并返回响应
	respBytes, _ := json.Marshal(resp)
	w.WriteHeader(http.StatusOK)
	w.Write(respBytes)
}

// getUserHandler 获取用户信息处理器 (GET - 只支持通过单个ID查询)
func getUserHandler(w http.ResponseWriter, r *http.Request) {
	ctx := r.Context()

	// 设置响应头
	w.Header().Set("Content-Type", "application/json")
	w.Header().Set("Cache-Control", "no-cache")
	w.Header().Set("Access-Control-Allow-Origin", "*")

	// 从查询参数获取ID (只支持一种查询方式)
	userId := r.URL.Query().Get("user_id")
	phoneNumber := r.URL.Query().Get("phone_number")
	wxOpenId := r.URL.Query().Get("wx_mini_app_open_id")

	req := &pb.GetUserRequest{
		UserId:          userId,
		PhoneNumber:     phoneNumber,
		WxMiniAppOpenId: wxOpenId,
	}

	// 调用服务
	resp, err := userService.GetUser(ctx, req)
	if err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(int(resp.Code), resp.Message),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(int(resp.Code))
		w.Write(respBytes)
		return
	}

	// 序列化并返回响应
	respBytes, _ := json.Marshal(resp)
	w.WriteHeader(http.StatusOK)
	w.Write(respBytes)
}

// updateUserHandler 更新用户信息处理器 (POST)
func updateUserHandler(w http.ResponseWriter, r *http.Request) {
	ctx := r.Context()

	// 设置响应头
	w.Header().Set("Content-Type", "application/json")
	w.Header().Set("Cache-Control", "no-cache")
	w.Header().Set("Access-Control-Allow-Origin", "*")

	// 解析请求体
	req := &pb.UpdateUserRequest{}
	if err := json.NewDecoder(r.Body).Decode(req); err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(http.StatusBadRequest, err.Error()),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(http.StatusBadRequest)
		w.Write(respBytes)
		return
	}

	// 调用服务
	resp, err := userService.UpdateUser(ctx, req)
	if err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(int(resp.Code), resp.Message),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(int(resp.Code))
		w.Write(respBytes)
		return
	}

	// 序列化并返回响应
	respBytes, _ := json.Marshal(resp)
	w.WriteHeader(http.StatusOK)
	w.Write(respBytes)
}

// deleteUserHandler 删除用户处理器 (POST)
func deleteUserHandler(w http.ResponseWriter, r *http.Request) {
	ctx := r.Context()

	// 设置响应头
	w.Header().Set("Content-Type", "application/json")
	w.Header().Set("Cache-Control", "no-cache")
	w.Header().Set("Access-Control-Allow-Origin", "*")

	// 解析请求体
	req := &pb.DeleteUserRequest{}
	if err := json.NewDecoder(r.Body).Decode(req); err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(http.StatusBadRequest, err.Error()),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(http.StatusBadRequest)
		w.Write(respBytes)
		return
	}

	// 调用服务
	resp, err := userService.DeleteUser(ctx, req)
	if err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(int(resp.Code), resp.Message),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(int(resp.Code))
		w.Write(respBytes)
		return
	}

	// 序列化并返回响应
	respBytes, _ := json.Marshal(resp)
	w.WriteHeader(http.StatusOK)
	w.Write(respBytes)
}

// listUsersHandler 查询用户列表处理器 (POST - 复杂查询条件)
func listUsersHandler(w http.ResponseWriter, r *http.Request) {
	ctx := r.Context()

	// 设置响应头
	w.Header().Set("Content-Type", "application/json")
	w.Header().Set("Cache-Control", "no-cache")
	w.Header().Set("Access-Control-Allow-Origin", "*")

	// 解析请求体
	req := &pb.ListUsersRequest{}
	if err := json.NewDecoder(r.Body).Decode(req); err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(http.StatusBadRequest, err.Error()),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(http.StatusBadRequest)
		w.Write(respBytes)
		return
	}

	// 调用服务
	resp, err := userService.ListUsers(ctx, req)
	if err != nil {
		// 构建错误响应
		errResp := &errs.BaseResponse{
			Data:  nil,
			Error: errs.NewError(int(resp.Code), resp.Message),
		}
		respBytes, _ := json.Marshal(errResp)
		w.WriteHeader(int(resp.Code))
		w.Write(respBytes)
		return
	}

	// 序列化并返回响应
	respBytes, _ := json.Marshal(resp)
	w.WriteHeader(http.StatusOK)
	w.Write(respBytes)
}
